syntax = "proto3";

package system.v1;

option go_package="rpc/system/v1;system_v1";

// protoc --go_out=. --twirp_out=option_prefix=sniper:. rpc/system/v1/department.proto
// Department 提供组织管理的相关接口
service Department{
    // List 获取组织列表
    rpc List(DepartmentListReq) returns (DepartmentListResp); // sniper:department_list
    // Add 添加组织
    rpc Add(DepartmentAddReq) returns (DepartmentAddResp); // sniper:department_add
    // Delete 删除组织
    rpc Delete(DepartmentDeleteReq) returns (DepartmentDeleteResp); // sniper:department_delete
}

// 提供给前端的department数据
message dep {
    int64 id = 1;
    string name = 2;
    int64 parent = 3;
    repeated dep departments = 4;
    string description = 5;
    int64 created = 6;
}

message DepartmentListReq {
    // 页数
    int32 page = 1;
    // 页大小
    int32 size = 2;
}

message DepartmentListResp {
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
    // 获取结果
    repeated dep data = 3;
}


message DepartmentAddReq {
    dep department = 1;
}

message DepartmentAddResp {
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
    // 新增的departmentID
    int64 data = 3;
}

message DepartmentDeleteReq {
    int64 id = 1;
}

message DepartmentDeleteResp {
    // 响应码[机读]
    int32 code = 1;
    // 返回信息，人读
    string msg = 2;
}
